--- a/.github/workflows/build-course.yml
+++ b/.github/workflows/build-course.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: Build course
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
         ruby-version: 2.6.x
     - name: Build and test with Rake
       run: |
-        gem install bundler
+        gem install bundler rake
         bundle install --jobs 4 --retry 3
         bundle exec rake
     - name: Crée une archive avec les fichiers HTML
