Installe graphviz dans le workflow

--- a/.github/workflows/build-course.yml
+++ b/.github/workflows/build-course.yml
@@ -16,12 +16,14 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - name: Build and test with Rake
+    -name: Set up graphviz
+      uses: kamiazya/setup-graphviz@v1
+    - name: Build with Rake
       run: |
         gem install bundler rake
         bundle install --jobs 4 --retry 3
         rake
-    - name: Crée une archive avec les fichiers HTML
+    - name: Build an artifact with HTML files
       uses: actions/upload-artifact@v1
       with:
         name: l1-cours
